--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
-        <i class="fas sa-wifi"></i>
+        <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
         <span>18:43</span>
