--- a/friends.html
+++ b/friends.html
@@ -14,7 +14,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span id="clock">18:43</span>
       </div>
       <div class="status-bar__column">
         <span>100%</span>
@@ -36,6 +36,17 @@
       <i class="fas fa-info-circle"></i> Friends' Names Display
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
+
+    <div class="user-component">
+      <div class="user-component__column">
+        <img src="images/profile.png" class="user-component__avatar" />
+        <div class="user-component__text">
+          <h4 class="user-component__title">frontend</h4>
+          <h6 class="user-component__subtitle">this text whatever</h6>
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
 
     <nav class="nav">
       <ul class="nav__list">
@@ -65,5 +76,6 @@
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/clock.js"></script>
   </body>
 </html>
