--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span id="clock">18:43</span>
       </div>
       <div class="status-bar__column">
         <span>100%</span>
@@ -41,5 +41,6 @@
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/clock.js"></script>
   </body>
 </html>
