--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
     </header>
 
     <form action="friends.html" method="get" id="login-form">
-      <input name="username" type="text" placeholder="Email or Phone number" />
-      <input name="password" type="password" placeholder="password" />
+      <input
+        name="username"
+        type="text"
+        placeholder="Email or Phone number"
+        required
+      />
+      <input name="password" type="password" placeholder="password" required />
       <input type="submit" value="Log In" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
