chat screen part two

--- a/chat.html
+++ b/chat.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat w/frontend - Kokoa Talk</title>
   </head>
-  <body>
+  <body id="chat-screen">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -25,7 +25,7 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <a href="./more.html">
+        <a href="./chats.html">
           <i class="fas fa-angle-left fa-3x"></i>
         </a>
       </div>
@@ -34,10 +34,13 @@
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-bars fa-lg"></i></span>
       </div>
     </header>
 
-    <main class="main-screen"></main>
+    <main class="main-screen main-chat">
+      <div class="chat__timestamp">Tuesday, June 30, 2020</div>
+    </main>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
